remove project number from displaying to prevent shifting screen

--- a/src/css/dev/tellme.module.css
+++ b/src/css/dev/tellme.module.css
@@ -188,4 +188,8 @@
       grid-column: 1 / 5;
       grid-row: 1 / span 5;
    }
+   
+   #projectNo {
+      display: none;
+   }
 }
